# normit-lib

./: CMakeLists.txt  LICENSE  README.md  nmExampleClass.cpp  nmExampleClass.h
cmake/: NorMITConfig.cmake  NorMITConfig.cmake.in
